# PetManager

./: .gitignore  langgraph.json  pyproject.toml  test_rag.py
.claude/: settings.json
app/: main.py
app/agents/: demo.py
app/api/v1/: auth.py  chat.py  oss.py
app/common/: logger.py  rag_manager.py  user_manager.py
app/core/: config.py  dependencies.py
app/models/: schemas.py
app/static/: index.html  login.html
resources/: users.db
resources/rag_docs/: 季节养护要点.txt  宠物健康状态判断.txt  宠物急救常识.txt  宠物疫苗接种.txt  宠物绝育知识.txt  宠物营养补充.txt  宠物驱虫指南.txt  犬类喂养指南.txt  犬类常见病.txt  犬类洗护建议.txt  犬类训练技巧.txt  猫类喂养指南.txt  猫类常见病.txt  猫类洗护建议.txt  猫类行为与训练.txt
